
* The Mesh Server will require Java 11 with the release of 2.0.0. The runtime support for Java 8 will be dropped. The Mesh Java REST client will still be usable with Java 8.

[[Unreleased]]

icon:check[] Improved performance and stability. link:https://github.com/gentics/mesh/pull/940[#940]

[[v1.3.2]]
== 1.3.2 (12.12.2019)

icon:check[] Fixed a bug in the `{project}/nodes/{node}` endpoint that allowed nodes to be found even if the requested node is not part of the project.

icon:check[] Fixed a bug that caused errors if an entity was requested by UUID and that UUID was from an entity of another type.

icon:plus[] Security: A dedicated logger for security related actions has been added. This logger always adds the IP address and username of the client. You can configure the logger in the `logback.xml` using the name `SecurityLogger`.

[[v1.3.1]]
== 1.3.1 (09.12.2019)

icon:check[] Tests: The `MeshDockerServer` and `MeshLocalServer` testcontainer classes will now set the initial admin password and not use a random generated password.

icon:check[] Java Rest Client: The client will now set the default max requests per host limit to `64` instead of `5` to improve concurrent request handling.

[[v1.3.0]]
== 1.3.0 (05.12.2019)

icon:plus[] Core: The amount of the deployed REST API verticles can now be link:{{< relref "administration-guide.asciidoc" >}}#_httpsssl[configured] and its default has been changed from 5 to 2 * CPU Cores.

icon:plus[] Core: It is now possible to use Gentics Mesh in read only mode. Take a look at the link:{{< relref "administration-guide.asciidoc" >}}#readonly[documentation] for more information.

icon:check[] REST: The `/health/live` and `/health/ready` endpoints have been added to the REST API. These endpoints are also available on the monitoring server, but adding them to the REST server makes it possible for load balancers to monitor the server on the same port that used to proxy the requests.
