@@ -72,9 +72,6 @@ public class NodeBinarySearchTest extends AbstractNodeSearchEndpointTest {
 		waitForJob(() -> {
 			call(() -> client().updateSchema(contentSchemaUuid, schemaUpdateRequest));
 		});
-		waitForJob(() -> {
-			call(() -> client().updateSchema(contentSchemaUuid, schemaUpdateRequest));
-		});
 
 		// .rtf with lorem text
 		byte[] bytes = Base64.getDecoder().decode("e1xydGYxXGFuc2kNCkxvcmVtIGlwc3VtIGRvbG9yIHNpdCBhbWV0DQpccGFyIH0=");
