@@ -29,6 +29,8 @@ include::content/docs/variables.adoc-include[]
 
 icon:check[] Improved performance and stability. link:https://github.com/gentics/mesh/pull/940[#940]
 
+icon:check[] Fixed a bug that caused Elasticsearch field mappings to not be applied if a new field has been added to an existing schema.
+
 [[v1.3.2]]
 == 1.3.2 (12.12.2019)
 
